hphp/test/zend/bad/ext/standard/tests/network/gethostbyaddr_error.php.expectregex
Testing gethostbyaddr : error conditions

-- Testing gethostbyaddr function with Zero arguments --

Warning: .+
NULL

-- Testing gethostbyaddr function with more than expected no. of arguments --

Warning: .+
NULL

-- Testing gethostbyaddr function with invalid addresses --

Warning: .+
bool\(false\)

Warning: .+
bool\(false\)

Warning: .+
bool\(false\)
Done